# scc

./: README.md
engine/: CMakeLists.txt
engine/engine/sim/: client.hpp  fluid.hpp  server.hpp  world.hpp
engine/src/render/: fancyterrain.cpp
engine/src/sim/: client.cpp  fluid.cpp  server.cpp  world.cpp
game/: CMakeLists.txt  application.cpp  application.hpp  bindings.cpp  bindings.hpp  brush.proto  fixups.hpp  fluid_phi_crash_main.frag  game.pro  main.cpp  mainmenu.cpp  mainmenu.hpp  mode.cpp  mode.hpp  mousebinding.cpp  mousebinding.hpp  openglscene.cpp  openglscene.hpp  preferencesdialog.cpp  preferencesdialog.hpp  qml.qrc  quickglitem.cpp  quickglitem.h  quickglitem.hpp  quickglscene.cpp  quickglscene.hpp  terraform.cpp  terraform.hpp
game/qml/: MainMenuForm.ui.qml  Terra.qml  TerraForm.ui.qml
game/resources/: brushes.qrc  shaders.qrc  stylesheets.qrc  textures.qrc
game/resources/brushes/: test.pbrush
game/resources/qml/: Terra.qml  TerraForm.ui.qml  main.qml
game/resources/shaders/aabb/: main.frag  main.vert
game/resources/shaders/curve/: main.frag  main.vert
game/resources/shaders/debug/: graph_edge.frag  graph_edge.vert  graph_node.frag  graph_node.vert
game/resources/shaders/fluid/: cpu.frag  cpu.vert  dummy.frag  main.vert
game/resources/shaders/frustum/: main.frag  main.vert
game/resources/shaders/generic/: normal_debug.frag
game/resources/shaders/lib/: cubehelix.frag  fluidatten.frag  matrix_block.glsl  sunlight.frag  universal_shader.frag
game/resources/shaders/oct_sphere/: main.frag  main.vert
game/resources/shaders/overlay/: main.frag  main.vert
game/resources/shaders/skycube/: skycube.frag  skycube.vert
game/resources/shaders/terraform/: drag_plane.vert  fancy_drag_plane.frag  fluidsource.frag  fluidsource.vert  terrain_drag_plane.frag
game/resources/shaders/terrain/: brush_overlay.frag  main.frag  main.geom  main.vert  normal_debug.geom  pointer_overlay.frag  test_overlay.frag
game/resources/shaders/testing/: fluid_plane.frag  fluid_plane.geom  fluid_plane.vert
game/resources/stylesheets/: main.css
game/resources/textures/src/: Good Textures_0013276.jpg.xmp  Good Textures_0013409.jpg.xmp  Good Textures_0013771.jpg.xmp  Good Textures_0013861.jpg.xmp  blend.xcf  blend00.xcf  skycube.blend  skycube.blend1
game/terraform/: brush.cpp  brush.hpp  drag.cpp  drag.hpp  terraform.cpp  terraform.hpp  terratool.cpp  terratool.hpp
game/ui/: application.ui  mainmenu.ui  preferencesdialog.ui  terraform.ui
libffengine-render/src/render/: fancyterrain.cpp
libscc/: CMakeLists.txt
